2015-08-14  Araki Ken  <arakiken@users.sf.net>

	* */x_window.c, x_layout.[ch], x_main_config.[ch], x_screen.[ch],
	  x_screen_manager.c:
	  layout_inner_border/--lborder option which enables you to specify the number
	  of inner border pixels of a layout manager is added.

2015-08-02  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c:
	  KBD_INUPT_NAME => KBD_INPUT_NUM
	  MOUSE_INUPT_NAME => MOUSE_INPUT_NUM

2015-08-02  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c: Keyboard or mouse input device name is
	  configurable by "KBD_INPUT_NAME" or "MOUSE_INPUT_NAME" environmental
	  variable.

2015-08-01  Araki Ken  <arakiken@users.sf.net>

	* x_window_cairo.c, x_font_ft.c, x_font.h:
	  - user_data_t is removed.
	  - compl_fonts and pattern are added to x_font_t.
	  - compl_fonts and pattern are created only if charset isn't US_ASCII,
	    ISO8859_1_R or ISCII.

2015-07-25  Araki Ken  <arakiken@users.sf.net>

	* x_window_cairo.c: If a character code is not found in FC_CHARSET,
	  another font which contains it is searched and used automatically.

	* x_font_ft.c: FC_CHARSET is set to cairo_scaled_font_t as a user data.

	* im_wnn.c: Illegal memory access by pressing 'A' - 'Z' is fixed.

2015-06-13  Araki Ken  <arakiken@users.sf.net>

	* im_wnn.c:
	  - https://gist.github.com/tsutsui/1d4f9af3b4a53c906eb4 is merged.
	  - Small "tsu" is available.

2015-06-07  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: 'make install-fb' error is fixed.

	* version.h.in: 3.5.0 -> 3.5.0post

2015-06-07  Araki Ken  <arakiken@users.sf.net>

	* 3.5.0 released.
	  (tag "rel-3_5_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.5.0.

2015-06-06  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: x_window_move() doesn't redraw screen if the area of
	  child windows fills less than 90% of a parent window.

	* fb/x_display.c: expose_window(all child winodws) in expose_display().
