@@ -51,7 +51,7 @@ version 20150607
                      exit_backscroll_by_pty | only_use_unicode_font | not_use_unicode_font |
                      unicode_noconv_areas | unicode_full_width_areas | box_drawing_font |
                      use_urgent_bell | allow_osc52 | allow_scp | auto_detect_encodings |
-                     use_auto_detect
+                     use_auto_detect | use_extended_scroll_shortcut
   get key          = encoding | is_auto_encoding | fg_color | bg_color | tabsize | logsize |
                      fontsize | fade_ratio | mod_meta_key | mod_meta_mode |
                      bel_mode | type_engine | use_anti_alias | use_variable_column_width |
