@@ -105,6 +105,7 @@ update(
 	mc_update_flag_mode(MC_FLAG_LOCALECHO) ;
 	mc_update_flag_mode(MC_FLAG_BLINKCURSOR) ;
 	mc_update_flag_mode(MC_FLAG_STATICBACKSCROLL) ;
+	mc_update_flag_mode(MC_FLAG_EXTSCROLLSHORTCUT) ;
 
 	mc_flush(io) ;
 
@@ -860,6 +861,11 @@ show(void)
 
 
 	config_widget = mc_flag_config_widget_new( MC_FLAG_STATICBACKSCROLL) ;
+	gtk_widget_show( config_widget) ;
+	gtk_box_pack_start( GTK_BOX(vbox) , config_widget , FALSE , FALSE , 0) ;
+
+
+	config_widget = mc_flag_config_widget_new( MC_FLAG_EXTSCROLLSHORTCUT) ;
 	gtk_widget_show( config_widget) ;
 	gtk_box_pack_start( GTK_BOX(vbox) , config_widget , FALSE , FALSE , 0) ;
 
